--- a/jess-designer.html
+++ b/jess-designer.html
@@ -148,7 +148,7 @@
   <section id="contact" class="contact">
     <h2>Contact Me</h2>
     <p>Email: <a href="mailto:jess.designer16@gmail.com">jess.designer16@gmail.com</a></p>
-    <p>Mobile: <a href="tel:9876543210">9876543210</a></p>
+    <p> <a href="tel:"></a></p>
     <a href="#home" class="back-to-top"><i class="fas fa-arrow-up"></i> Back to Top</a>
   </section>
 
