--- a/jess-designer.html
+++ b/jess-designer.html
@@ -89,6 +89,11 @@
           <img src="https://i.ibb.co/qLXGt3N1/Chat-GPT-Image-Sep-18-2025-at-11-14-14-PM.png" alt="Dress 11" data-feedback="Outstanding creativity and professionalism. – Pooja">
           <button class="view-btn"><i class="fas fa-eye"></i></button>
         </div>
+        <div class="work-item">
+          <img
+src="https://i.ibb.co/YByQ5ssZ/Chat-GPT-Image-Oct-18-2025-at-09-38-12-PM.png" alt="Dress 12" data-feedback="Beyound the imagination. – Kangana">
+          <button class="view-btn"><i class="fas fa-eye"></i></button>
+        </div>
       </div>
     </div>
   </section>
@@ -140,6 +145,10 @@
       <div class="feedback-card">
         <img src="https://i.ibb.co/qLXGt3N1/Chat-GPT-Image-Sep-18-2025-at-11-14-14-PM.png" alt="Dress 11">
         <p>"Outstanding creativity and professionalism." – Pooja</p>
+      </div>
+      <div class="feedback-card">
+        <img src="https://i.ibb.co/YByQ5ssZ/Chat-GPT-Image-Oct-18-2025-at-09-38-12-PM.png" alt="Dress 12">
+        <p>"Beyound the imagination." – Kangana</p>
       </div>
     </div>
   </section>
