--- a/jess-designer.html
+++ b/jess-designer.html
@@ -94,6 +94,16 @@
 src="https://i.ibb.co/YByQ5ssZ/Chat-GPT-Image-Oct-18-2025-at-09-38-12-PM.png" alt="Dress 12" data-feedback="Beyound the imagination. – Kangana">
           <button class="view-btn"><i class="fas fa-eye"></i></button>
         </div>
+        <div class="work-item">
+          <img
+src="https://i.ibb.co/SwGLSC3v/file-0000000029e0720799079e6876e28e57.png" alt="Dress 13" data-feedback="Beautifully designed outfits with excellent craftsmanship, elegant detailing, and a refined overall finish. – Shima.">
+          <button class="view-btn"><i class="fas fa-eye"></i></button>
+        </div>
+        <div class="work-item">
+          <img
+src="https://i.ibb.co/RphWrQSZ/file-000000000f6c72078ad30df71892ae40.png" alt="Dress 14" data-feedback="Impressive creativity, fine detailing and a polished, professional-quality finish. - Jasmita.">
+          <button class="view-btn"><i class="fas fa-eye"></i></button>
+        </div>
       </div>
     </div>
   </section>
@@ -150,6 +160,14 @@ src="https://i.ibb.co/YByQ5ssZ/Chat-GPT-Image-Oct-18-2025-at-09-38-12-PM.png" al
         <img src="https://i.ibb.co/YByQ5ssZ/Chat-GPT-Image-Oct-18-2025-at-09-38-12-PM.png" alt="Dress 12">
         <p>"Beyound the imagination." – Kangana</p>
       </div>
+      <div class="feedback-card">
+        <img src="https://i.ibb.co/SwGLSC3v/file-0000000029e0720799079e6876e28e57.png" alt="Dress 13">
+        <p>"Beautifully designed outfits with excellent craftsmanship, elegant detailing, and a refined overall finish." – Shima</p>
+        </div>
+      <div class="feedback-card">
+        <img src="https://i.ibb.co/RphWrQSZ/file-000000000f6c72078ad30df71892ae40.png" alt="Dress 14">
+        <p>"Impressive creativity, fine detailing and a polished, professional-quality finish." - Jasmita</p>
+        </div>
     </div>
   </section>
 
