--- a/jess-designer.html
+++ b/jess-designer.html
@@ -96,12 +96,32 @@ src="https://i.ibb.co/YByQ5ssZ/Chat-GPT-Image-Oct-18-2025-at-09-38-12-PM.png" al
         </div>
         <div class="work-item">
           <img
-src="https://i.ibb.co/RG6j9Nht/Chat-GPT-Image-Dec-23-2025-at-01-21-07-PM.png" alt="Dress 13" data-feedback="Beautifully designed outfits with excellent craftsmanship, elegant detailing, and a refined overall finish. – Shima.">
+src="https://i.ibb.co/RG6j9Nht/Chat-GPT-Image-Dec-23-2025-at-01-21-07-PM.png" alt="Dress 13" data-feedback="Beautifully designed outfits with excellent craftsmanship, elegant detailing, and a refined overall finish. – Shima">
           <button class="view-btn"><i class="fas fa-eye"></i></button>
         </div>
         <div class="work-item">
           <img
-src="https://i.ibb.co/RphWrQSZ/file-000000000f6c72078ad30df71892ae40.png" alt="Dress 14" data-feedback="Impressive creativity, fine detailing and a polished, professional-quality finish. - Jasmita.">
+src="https://i.ibb.co/RphWrQSZ/file-000000000f6c72078ad30df71892ae40.png" alt="Dress 14" data-feedback="Impressive creativity, fine detailing and a polished, professional-quality finish. - Jasmita">
+          <button class="view-btn"><i class="fas fa-eye"></i></button>
+        </div>
+        <div class="work-item">
+          <img
+src="https://i.ibb.co/SwJnG8XX/image-15.png>" alt="Dress 15" data-feedback="These dresses made me feel like a princess and I didn’t want to take them off. - Trisha">
+          <button class="view-btn"><i class="fas fa-eye"></i></button>
+        </div>
+        <div class="work-item">
+          <img
+src="https://i.ibb.co/SDzxW8C0/Image-16.png>" alt="Dress 16" data-feedback="The colors and designs are lovely, and the dresses are very comfy to wear. - Hejal">
+          <button class="view-btn"><i class="fas fa-eye"></i></button>
+        </div>
+        <div class="work-item">
+          <img
+src="https://i.ibb.co/Fbsrp8K4/Image-17.png>" alt="Dress 17" data-feedback="A perfect blend of luxury, precision tailoring and intricate artistry in every piece. - Ravina">
+          <button class="view-btn"><i class="fas fa-eye"></i></button>
+        </div>
+        <div class="work-item">
+          <img
+src="https://i.ibb.co/JRFVbtNy/Image-18.png>" alt="Dress 18" data-feedback="Exquisite craftsmanship with refined detailing and a flawless finish, reflecting true designer elegance. - Krishna">
           <button class="view-btn"><i class="fas fa-eye"></i></button>
         </div>
       </div>
@@ -167,6 +187,22 @@ src="https://i.ibb.co/RphWrQSZ/file-000000000f6c72078ad30df71892ae40.png" alt="D
       <div class="feedback-card">
         <img src="https://i.ibb.co/RphWrQSZ/file-000000000f6c72078ad30df71892ae40.png" alt="Dress 14">
         <p>"Impressive creativity, fine detailing and a polished, professional-quality finish." - Jasmita</p>
+        </div>
+      <div class="feedback-card">
+        <img src="https://i.ibb.co/SwJnG8XX/image-15.png" alt="Dress 15">
+        <p>"These dresses made me feel like a princess and I didn’t want to take them off." - Trisha</p>
+        </div>
+      <div class="feedback-card">
+        <img src="https://i.ibb.co/SDzxW8C0/Image-16.png" alt="Dress 16">
+        <p>"The colors and designs are lovely, and the dresses are very comfy to wear." - Hejal</p>
+        </div>
+      <div class="feedback-card">
+        <img src="https://i.ibb.co/Fbsrp8K4/Image-17.png" alt="Dress 17">
+        <p>"A perfect blend of luxury, precision tailoring and intricate artistry in every piece." - Ravina</p>
+        </div>
+      <div class="feedback-card">
+        <img src="https://i.ibb.co/JRFVbtNy/Image-18.png" alt="Dress 18">
+        <p>"Exquisite craftsmanship with refined detailing and a flawless finish, reflecting true designer elegance." - Krishna</p>
         </div>
     </div>
   </section>
