--- a/jess-designer.html
+++ b/jess-designer.html
@@ -212,7 +212,8 @@ src="https://i.ibb.co/JRFVbtNy/Image-18.png>" alt="Dress 18" data-feedback="Exqu
     <h2>Contact Me</h2>
     <p>Email: <a href="mailto:jess.designer16@gmail.com">jess.designer16@gmail.com</a></p>
     <p> <a href="tel:"></a></p>
-    <a href="#home" class="back-to-top"><i class="fas fa-arrow-up"></i> Back to Top</a>
+    <p>Instagram: <a href="url:https://www.instagram.com/jasmita_raval/">Click here to visit Instragram page</a></p>
+    <p><a href="#home" class="back-to-top"><i class="fas fa-arrow-up"></i> Back to Top</a></p>
   </section>
 
   <footer>
