--- a/jess-designer.html
+++ b/jess-designer.html
@@ -124,6 +124,11 @@ src="https://i.ibb.co/Fbsrp8K4/Image-17.png>" alt="Dress 17" data-feedback="A pe
 src="https://i.ibb.co/JRFVbtNy/Image-18.png>" alt="Dress 18" data-feedback="Exquisite craftsmanship with refined detailing and a flawless finish, reflecting true designer elegance. - Krishna">
           <button class="view-btn"><i class="fas fa-eye"></i></button>
         </div>
+        <div class="work-item">
+          <img
+src="https://https://i.ibb.co/LDwm4CL2/Chat-GPT-Image-Feb-28-2026-at-03-42-09-PM.png>" alt="Dress 19" data-feedback="I like seeing my name on my jacket, it makes it my favorite outfit! - Harshiv">
+          <button class="view-btn"><i class="fas fa-eye"></i></button>
+        </div>
       </div>
     </div>
   </section>
@@ -203,6 +208,10 @@ src="https://i.ibb.co/JRFVbtNy/Image-18.png>" alt="Dress 18" data-feedback="Exqu
       <div class="feedback-card">
         <img src="https://i.ibb.co/JRFVbtNy/Image-18.png" alt="Dress 18">
         <p>"Exquisite craftsmanship with refined detailing and a flawless finish, reflecting true designer elegance." - Krishna</p>
+        </div>
+      <div class="feedback-card">
+        <img src="https://i.ibb.co/LDwm4CL2/Chat-GPT-Image-Feb-28-2026-at-03-42-09-PM.png" alt="Dress 19">
+        <p>"I like seeing my name on my jacket, it makes it my favorite outfit!" - Harshiv</p>
         </div>
     </div>
   </section>
