--- a/jess-designer.html
+++ b/jess-designer.html
@@ -126,7 +126,12 @@ src="https://i.ibb.co/JRFVbtNy/Image-18.png>" alt="Dress 18" data-feedback="Exqu
         </div>
         <div class="work-item">
           <img
-src="https://https://i.ibb.co/LDwm4CL2/Chat-GPT-Image-Feb-28-2026-at-03-42-09-PM.png>" alt="Dress 19" data-feedback="I like seeing my name on my jacket, it makes it my favorite outfit! - Harshiv">
+src="https://i.ibb.co/svNrVkx4/image-19-1.png>" alt="Dress 19-1" data-feedback="I like seeing my name on my jacket, it makes it my favorite outfit! - Harshiv">
+          <button class="view-btn"><i class="fas fa-eye"></i></button>
+        </div>
+        <div class="work-item">
+          <img
+src="https://i.ibb.co/fzDh8s8X/image-19-2.png>" alt="Dress 19-2" data-feedback="I like seeing my name on my jacket, it makes it my favorite outfit! - Harshiv">
           <button class="view-btn"><i class="fas fa-eye"></i></button>
         </div>
       </div>
@@ -210,7 +215,11 @@ src="https://https://i.ibb.co/LDwm4CL2/Chat-GPT-Image-Feb-28-2026-at-03-42-09-PM
         <p>"Exquisite craftsmanship with refined detailing and a flawless finish, reflecting true designer elegance." - Krishna</p>
         </div>
       <div class="feedback-card">
-        <img src="https://i.ibb.co/LDwm4CL2/Chat-GPT-Image-Feb-28-2026-at-03-42-09-PM.png" alt="Dress 19">
+        <img src="https://i.ibb.co/svNrVkx4/image-19-1.png" alt="Dress 19-1">
+        <p>"I like seeing my name on my jacket, it makes it my favorite outfit!" - Harshiv</p>
+        </div>
+      <div class="feedback-card">
+        <img src="https://i.ibb.co/fzDh8s8X/image-19-2.png" alt="Dress 19-2">
         <p>"I like seeing my name on my jacket, it makes it my favorite outfit!" - Harshiv</p>
         </div>
     </div>
