--- a/jess-designer.html
+++ b/jess-designer.html
@@ -116,12 +116,22 @@ src="https://i.ibb.co/SDzxW8C0/Image-16.png>" alt="Dress 16" data-feedback="The 
         </div>
         <div class="work-item">
           <img
-src="https://i.ibb.co/Fbsrp8K4/Image-17.png>" alt="Dress 17" data-feedback="A perfect blend of luxury, precision tailoring and intricate artistry in every piece. - Ravina">
+src="https://i.ibb.co/7x1mVfzj/Image-17-1.png>" alt="Dress 17-1" data-feedback="A perfect blend of luxury, precision tailoring and intricate artistry in every piece. - Ravina">
           <button class="view-btn"><i class="fas fa-eye"></i></button>
         </div>
         <div class="work-item">
           <img
-src="https://i.ibb.co/JRFVbtNy/Image-18.png>" alt="Dress 18" data-feedback="Exquisite craftsmanship with refined detailing and a flawless finish, reflecting true designer elegance. - Krishna">
+src="https://i.ibb.co/fY6wXPcV/Image-17-2.png>" alt="Dress 17-2" data-feedback="A perfect blend of luxury, precision tailoring and intricate artistry in every piece. - Ravina">
+          <button class="view-btn"><i class="fas fa-eye"></i></button>
+        </div>
+        <div class="work-item">
+          <img
+src="https://i.ibb.co/99GwWrRN/Image-18-1.png>" alt="Dress 18-1" data-feedback="Exquisite craftsmanship with refined detailing and a flawless finish, reflecting true designer elegance. - Krishna">
+          <button class="view-btn"><i class="fas fa-eye"></i></button>
+        </div>
+        <div class="work-item">
+          <img
+src="https://i.ibb.co/DHh4sjFQ/Image-18-2.png>" alt="Dress 18-2" data-feedback="Exquisite craftsmanship with refined detailing and a flawless finish, reflecting true designer elegance. - Krishna">
           <button class="view-btn"><i class="fas fa-eye"></i></button>
         </div>
         <div class="work-item">
