--- a/jess-designer.html
+++ b/jess-designer.html
@@ -217,11 +217,19 @@ src="https://i.ibb.co/fzDh8s8X/image-19-2.png>" alt="Dress 19-2" data-feedback="
         <p>"The colors and designs are lovely, and the dresses are very comfy to wear." - Hejal</p>
         </div>
       <div class="feedback-card">
-        <img src="https://i.ibb.co/Fbsrp8K4/Image-17.png" alt="Dress 17">
+        <img src="https://i.ibb.co/Fbsrp8K4/Image-17.png" alt="Dress 17-1">
         <p>"A perfect blend of luxury, precision tailoring and intricate artistry in every piece." - Ravina</p>
         </div>
       <div class="feedback-card">
-        <img src="https://i.ibb.co/JRFVbtNy/Image-18.png" alt="Dress 18">
+        <img src="https://i.ibb.co/Fbsrp8K4/Image-17.png" alt="Dress 17-2">
+        <p>"A perfect blend of luxury, precision tailoring and intricate artistry in every piece." - Ravina</p>
+        </div>
+      <div class="feedback-card">
+        <img src="https://i.ibb.co/JRFVbtNy/Image-18.png" alt="Dress 18-1">
+        <p>"Exquisite craftsmanship with refined detailing and a flawless finish, reflecting true designer elegance." - Krishna</p>
+        </div>
+      <div class="feedback-card">
+        <img src="https://i.ibb.co/JRFVbtNy/Image-18.png" alt="Dress 18-2">
         <p>"Exquisite craftsmanship with refined detailing and a flawless finish, reflecting true designer elegance." - Krishna</p>
         </div>
       <div class="feedback-card">
